--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <ul>
      <H5>
       <i>
-     <li> <a href="INDEX.HTML">HOME</a></li>
+     <li> <a href="index.html">HOME</a></li>
      <Li> <a href="COURSES.HTML">COURSES</a></Li>
      <Li> <a href="CONTACT.HTML"> CONTACT </a> </Li>
     </i>
